course list vo query
